# src/services/model/index.ts
@@ -38,6 +38,7 @@ export * from './getApiVendorAllParams'
 export * from './getApiZoneAllWithParamsParams'
 export * from './getApiZoneEntriesParams'
 export * from './logType'
+export * from './loginDto'
 export * from './markerDeliveryDto'
 export * from './markerDto'
 export * from './markerFormDto'
@@ -48,6 +49,8 @@ export * from './postApiDeliveryGenerateBarcodePdfParams'
 export * from './postApiEntryMoveParams'
 export * from './postApiEntrySplitParams'
 export * from './problemDetails'
+export * from './registerDto'
+export * from './tokenResponse'
 export * from './vendorDto'
 export * from './vendorFormDto'
 export * from './vendorMarkerDto'
